--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Happy Monkey', cursive;
     text-align: center;
-    background: linear-gradient(#a2d2ff, pink);
+    background: linear-gradient(#76bafa, rgb(255, 151, 168));
     color:white;
     display: flex;
     flex-direction: column;
@@ -18,8 +18,8 @@ h1, h2, h3, p, h4 {
     text-shadow: 0px 0px 1px black;
 }
 
-#munda{
-    width:150px;
+#dp{
+    width:170px;
     border-radius: 100%;
     border:6px solid #EFB0C9 
 }
@@ -50,36 +50,21 @@ h1, h2, h3, p, h4 {
     margin-top: 0px;
 }
 
-
-#gift-img-cheers {
-    height:200px;
-}
-
 .gift-img {
-    width: 400px;
-    height:400px;
+    width: 420px;
+    height:450px;
     border-radius: 9px;
     background-image: url("gift-cover.jpg");
     background-size: cover;
     border:6px solid white;
     margin:0 auto;
+    overflow: hidden;
 }
 
-#gift-img-happy:hover {
-   background-image: url("happy.gif"); 
+.js-img{
+    width: 100%;
+    height: 100%;
 }
-
-#gift-img-genius:hover {
-    background-image: url("genius.gif"); 
- }
-
- #gift-img-badass:hover {
-    background-image: url("badass.gif"); 
- }
-
- #gift-img-cheers:hover {
-    background-image: url("cheers.gif"); 
- }
 
  #footer{
     width:400px;
